--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta name="google-site-verification" content="FySiSzMSPvxKBOpfKGy_flV7vmJf7ERRxy20i7Yk9YE" />
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Travel tracking application"
+      content="Country Counter - Complete Collection of National Flags, App to Create Your Travel and Wishlists"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/cc.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Country Counter</title>
+    <title>Country Counter and Country Flags</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
